<resources>
    <string name="app_name">Box Office Movies</string>
    <string name="movie_picture_content_description">Movie picture</string>
    <string name="most_popular_item">most popular</string>
    <string name="highest_rated_item">highest rated</string>
    <string name="favourite_item">favorites</string>
    <string name="about_item">about</string>
    <string name="about_content">this app show the latest box office movies with many details about each movie</string>
    <string name="details_activity">Movie Details</string>
    <string name="most_popular_url">https://api.themoviedb.org/3/movie/popular?api_key=</string>
    <string name="highest_rated_url">https://api.themoviedb.org/3/movie/top_rated?api_key=</string>
    <string name="base_image_url">http://image.tmdb.org/t/p/</string>
    <string name="size_image_url">w185/</string>
    <string name="original_title_label">Original Title</string>
    <string name="plot_synopsis_label">A plot synopsis</string>
    <string name="user_rating_label">User rating</string>
    <string name="release_date_label">Release date</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="no_internet_connection_details">No internet connection to view trailers and reviews!!</string>
    <string name="reload_views">reload</string>
    <string name="model_class_name">Movie</string>
    <string name="base_image_youtube_url">https://img.youtube.com/vi/</string>
    <string name="remain_image_youtube_url">/0.jpg</string>
    <string name="trailer_url">https://api.themoviedb.org/3/movie/</string>
    <string name="remain_trailer_url">/videos?api_key=</string>
    <string name="remain_review_url">/reviews?api_key=</string>
    <string name="trailer_label">Trailers: </string>
    <string name="watch_trailer_url">https://www.youtube.com/watch?v=</string>
    <string name="review_label">Reviews: </string>
    <string name="content_label">Content</string>
    <string name="reference_label">Reference</string>
    <string name="cancel_label">Cancel</string>
</resources>
