<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <LinearLayout
        android:id="@+id/details_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/detail_layout_padding">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_iv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_picture_content_description"
                android:scaleType="fitXY" />

            <ToggleButton
                android:id="@+id/favouriteToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/check"
                android:textOff=""
                android:textOn="" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/layout_padding_top">

            <TextView
                android:id="@+id/original_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/original_title_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/original_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/text_view_left_padding"
                android:paddingLeft="@dimen/text_view_left_padding"
                android:paddingEnd="@dimen/text_view_right_padding"
                android:paddingRight="@dimen/text_view_right_padding" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/layout_padding_top">

            <TextView
                android:id="@+id/user_rating_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_rating_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_rating_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/text_view_left_padding"
                android:paddingLeft="@dimen/text_view_left_padding"
                android:paddingEnd="@dimen/text_view_right_padding"
                android:paddingRight="@dimen/text_view_right_padding" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/layout_padding_top">

            <TextView
                android:id="@+id/release_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/release_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/text_view_left_padding"
                android:paddingLeft="@dimen/text_view_left_padding"
                android:paddingEnd="@dimen/text_view_right_padding"
                android:paddingRight="@dimen/text_view_right_padding" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/layout_padding_top">

            <TextView
                android:id="@+id/plot_synopsis_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plot_synopsis_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/plot_synopsis_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/text_view_left_padding"
                android:paddingLeft="@dimen/text_view_left_padding"
                android:paddingEnd="@dimen/text_view_right_padding"
                android:paddingRight="@dimen/text_view_right_padding" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_marginTop="@dimen/vertical_margin"
            android:background="@color/colorBlackLine" />

        <TextView
            android:id="@+id/trailer_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trailer_label"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/trailers_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_marginTop="@dimen/vertical_margin"
            android:background="@color/colorBlackLine" />

        <TextView
            android:id="@+id/review_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/review_label"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/reviews_rv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>